// Vitest Snapshot v1

exports[`basic > hi {name} ! 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 9,
        "key": "name",
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 4,
      },
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hi {name} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`multiple > {first} {middle}　{last} 1`] = `
{
  "body": {
    "end": 23,
    "items": [
      {
        "end": 7,
        "key": "first",
        "loc": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 4,
      },
      {
        "end": 8,
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
        },
        "start": 7,
        "type": 3,
        "value": " ",
      },
      {
        "end": 16,
        "key": "middle",
        "loc": {
          "end": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
          "start": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "start": 8,
        "type": 4,
      },
      {
        "end": 17,
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "start": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
        },
        "start": 16,
        "type": 3,
        "value": "　",
      },
      {
        "end": 23,
        "key": "last",
        "loc": {
          "end": {
            "column": 24,
            "line": 1,
            "offset": 23,
          },
          "start": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
        },
        "start": 17,
        "type": 4,
      },
    ],
    "loc": {
      "end": {
        "column": 24,
        "line": 1,
        "offset": 23,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 23,
  "loc": {
    "end": {
      "column": 24,
      "line": 1,
      "offset": 23,
    },
    "source": "{first} {middle}　{last}",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`new lines in placeholder > {first}
{middle}
{last} 1`] = `
{
  "body": {
    "end": 23,
    "items": [
      {
        "end": 7,
        "key": "first",
        "loc": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 4,
      },
      {
        "end": 8,
        "loc": {
          "end": {
            "column": 1,
            "line": 2,
            "offset": 8,
          },
          "start": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
        },
        "start": 7,
        "type": 3,
        "value": "
",
      },
      {
        "end": 16,
        "key": "middle",
        "loc": {
          "end": {
            "column": 9,
            "line": 2,
            "offset": 16,
          },
          "start": {
            "column": 1,
            "line": 2,
            "offset": 8,
          },
        },
        "start": 8,
        "type": 4,
      },
      {
        "end": 17,
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
            "offset": 17,
          },
          "start": {
            "column": 9,
            "line": 2,
            "offset": 16,
          },
        },
        "start": 16,
        "type": 3,
        "value": "
",
      },
      {
        "end": 23,
        "key": "last",
        "loc": {
          "end": {
            "column": 7,
            "line": 3,
            "offset": 23,
          },
          "start": {
            "column": 1,
            "line": 3,
            "offset": 17,
          },
        },
        "start": 17,
        "type": 4,
      },
    ],
    "loc": {
      "end": {
        "column": 7,
        "line": 3,
        "offset": 23,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 23,
  "loc": {
    "end": {
      "column": 7,
      "line": 3,
      "offset": 23,
    },
    "source": "{first}
{middle}
{last}",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`whitespaces in placeholder > hi {  name } ! 1`] = `
{
  "body": {
    "end": 14,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 12,
        "key": "name",
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 4,
      },
      {
        "end": 14,
        "loc": {
          "end": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "start": 12,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 14,
  "loc": {
    "end": {
      "column": 15,
      "line": 1,
      "offset": 14,
    },
    "source": "hi {  name } !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;
